Defined blockchain class and some attributes and methods

--- a/blockchain.ipynb
+++ b/blockchain.ipynb
@@ -15,28 +15,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import hashlib"
+    "import hashlib\n",
+    "import json\n",
+    "from time import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1f6a4b37",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'95d3fe7c2d46ccf69357159bc6f65540f8cbe48ee13464be4898350b'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "hashlib.sha224(b\"This is a test!\").hexdigest()"
+    "class blockchain(object):\n",
+    "\n",
+    "    # Class initializer\n",
+    "    # Self is passed to initializer has ref. to new object being instantiated\n",
+    "    def __init__(self): \n",
+    "        # Instance Attributes\n",
+    "        self.chain = []\n",
+    "        self.current_transaction = []\n",
+    "\n",
+    "    def createBlock(self):\n",
+    "        # Creates a new block and adds it to the chain\n",
+    "        pass\n",
+    "\n",
+    "    def addTransaction(self):\n",
+    "        # Adds a new transaction to the list of transactions\n",
+    "        pass\n",
+    "\n",
+    "    # Static methods cannot access class attributes or instance attributes\n",
+    "    # Instance attributes are variables belonging to a singular object\n",
+    "    @staticmethod\n",
+    "    def hash(block):\n",
+    "        # Hashses a block\n",
+    "        pass\n",
+    "\n",
+    "    # Akin to making a getter function the Pythonic way\n",
+    "    @property\n",
+    "    def getLastBlock(self):\n",
+    "        # Retruns the last clock in the chain\n",
+    "        pass"
    ]
   },
   {
